Changes:
Plugin.download verändert. Speedmessung läuft jetzt über speedmeter. Der laufende Durchschnitt wird dabei verwendet

HTTPReconnect.java
Kann jetzt über eine checkbox kurzzeitig deaktiviert werden

Controlling: Mehere Events hinzugefügt

Dropper:
setText infos weggenommen
TabDownloadslinks:
links können verschoben werden. 
Rechtsklick menü

PLugin.post/getRequest:
gzip unterstützung(nicht getestet)

Rapidshare.com:
Hardeware defekts eine eingebaut (nicht getestet)


git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@184 ebf7c1c2-ba36-0410-9fe8-c592906822b4